Create RoutesLoader with styles and set it to display if any of the app's route is loading initially

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --pry-color: rgb(225, 202, 76);
   --bg-white: #f8f8ff;
   --card-bg: #f8f4ff;
+  --white: #fff;
   --stroke-bottom: #9d9d9d;
   --text-dark: #4a4a4a;
   --text-fade: #aeaeae;
