--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,26 @@ ul {
 }
 
 a {
+  display: inline-block;
+  position: relative;
   color: var(--text-dark);
   text-decoration: none;
 }
+
+a::before {
+		position: absolute;
+		content: '';
+		bottom: -0.3rem;
+		left: 0rem;
+		width: 100%;
+		height: 0.2rem;
+		background-color: var(--pry-color);
+		transform: scale(0);
+    transition: 0.4s ease;
+	}
+
+	a:hover::before {
+		transform: scale(1);
+		transition: 0.4s ease;
+	}
 
