Installed react-query-package, setup query with default-options globally, use query to fetch trending-movies from the api-requests, set hover style on specific links.

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ a {
   text-decoration: none;
 }
 
-a::before {
+a.link::before {
 		position: absolute;
 		content: '';
 		bottom: -0.3rem;
@@ -53,7 +53,7 @@ a::before {
     transition: 0.4s ease;
 	}
 
-	a:hover::before {
+	a.link:hover::before {
 		transform: scale(1);
 		transition: 0.4s ease;
 	}
